--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
   </head>
   <body>
     <h1>Welcome to Ibiza</h1>
+
+    <footer>
+      Created by Emily Mason, and open sourced on
+      <a href="https://github.com/masone85/travel-project-1" target="_blank"
+        >GitHub!</a
+      >
+    </footer>
   </body>
 </html>
