added subtitle to homepage

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   </head>
   <body>
     <h1>Welcome to Ibiza</h1>
+    <h2>
+      " . . . sanctuary for the soul, a place where people connect, celebrate,
+      and find peace."
+    </h2>
+    <h4>Jean-Claude Ades</h4>
 
     <footer>
       Created by Emily Mason, and open sourced on
